--- a/rnArt.html
+++ b/rnArt.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="rnCSS.css">
 <link rel="icon" href="images\rnLogo.png">
 <title>Art</title>
@@ -14,56 +15,20 @@
       <li><a class="nav-link" href="rnPortfolioSite.html">Home</a></li>
       <li><a class="nav-link" href="rnArt.html">Art</a></li>
       <li><a class="nav-link" href="rnAnim.html">Animation</a></li>
-      <li><a class="nav-link" href="rnGames.html">Games</a></li>
+      <li><a class="nav-link" href="rnArtifacts.html">Artifacts</a></li>
     </nav>
   </div>
 </header>
-<!-- Grid row -->
-<div class="row">
-  <!-- Grid column -->
-
-</div>
-<!-- Grid row -->
-
-<!-- Grid row -->
+<div class="row"> </div>
 <div class="gallery" id="gallery">
-
-  <!-- Grid column -->
-  <div class="mb-3 pics animation all 2">
-    <img class="img-fluid" src="images/banner.jpg" alt="bannerImage" width="100%">
-  </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="images/crouch.jpg" alt="crouchSketch" width="100%">
-  </div>
-  <!-- Grid column -->
-
-  <!-- Grid column -->
-  <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="images/sneeze.jpg" alt="manSneeze" width="100%">
-  </div>
-  <!-- Grid column -->
-	<!-- Grid column -->
-  <div class="mb-3 pics animation all 2">
-    <img class="img-fluid" src="images/charDesign.png" alt="characterDesign" width="100%">
-  </div>
-  <!-- Grid column -->
-<div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="images/scooter.png" alt="scooterPaint" width="100%">
-  </div>
-  <!-- Grid column -->
-  <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="images/expressions.png" alt="catExpressions" width="100%">
-  </div>
-  <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="images/teeth.png" alt="manSneeze" width="100%">
-  </div>
-  <div class="mb-3 pics animation all 1">
-    <img class="img-fluid" src="images/smile.png" alt="manSneeze" width="100%">
-  </div>
-
+  <div class="mb-3 pics animation all 1"> <img class="img-fluid" src="images/crouch.jpg" alt="crouchSketch" width="100%"> </div>
+  <div class="mb-3 pics animation all 2"> <img class="img-fluid" src="images/smile.png" alt="smile" width="100%"> </div>
+  <div class="mb-3 pics animation all 1"> <img class="img-fluid" src="images/sneeze.jpg" alt="manSneeze" width="100%"> </div>
+  <div class="mb-3 pics animation all 2"> <img class="img-fluid" src="images/charDesign.png" alt="characterDesign" width="100%"> </div>
+  <div class="mb-3 pics animation all 1"> <img class="img-fluid" src="images/scooter.png" alt="scooterPaint" width="100%"> </div>
+  <div class="mb-3 pics animation all 1"> <img class="img-fluid" src="images/expressions.png" alt="catExpressions" width="100%"> </div>
+  <div class="mb-3 pics animation all 1"> <img class="img-fluid" src="images/banner.jpg" alt="bannerArt" width="100%"> </div>
+  <div class="mb-3 pics animation all 1"> <img class="img-fluid" src="images/teeth.png" alt="manTeeth" width="100%"> </div>
 </div>
 </body>
 </html>
