--- a/rnPortfolioSite.html
+++ b/rnPortfolioSite.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="rnCSS.css">
 <link rel="icon" href="images\rnLogo.png">
 <title>Portfolio</title>
@@ -14,7 +15,7 @@
 			<li><a class="nav-link" href="rnPortfolioSite.html">Home</a></li>
 			<li><a class="nav-link" href="rnArt.html">Art</a></li>
 			<li><a class="nav-link" href="rnAnim.html">Animation</a></li>
-		    <li><a class="nav-link" href="rnGames.html">Games</a></li>
+		    <li><a class="nav-link" href="rnArtifacts.html">Artifacts</a></li>
         </nav>
       </div>
     </header>
