--- a/rnPortfolioSite.html
+++ b/rnPortfolioSite.html
@@ -21,8 +21,10 @@
     </header>
     <div>
     	<p>
-    		Hewwo !
-    	<img class="logoImage" src="images/rnLogo.png" width="25%">
+			<img class="logoImage" src="images/rnLogo.png" width="25%"></p>
+  		<h3>About Me</h3>
+   		<p class="intro">
+    		I'm currently studying Games, Interactive Media, and Mobile Technology at Boise State University. I spend most of my free time drawing, with focus on digital painting and 2D animation. I also self-study Japanese, have been in the process of learning FL Studio to produce music, and can play a variety of instruments. I'm a huge music and animation fan, and would love nothing more than to be able to work professionally in these fields some day!
 		</p>
     </div>
 </body>
