--- a/rnAnim.html
+++ b/rnAnim.html
@@ -15,7 +15,7 @@
 <header class="masthead mb-auto">
   <div class="nav">
     <nav href="index.html"><img src="images\banner.jpg" alt="rnBanner" id="header-img" width="100%">
-      <li><a class="nav-link" href="rnPortfolioSite.html">Home</a></li>
+      <li><a class="nav-link" href="index.html">Home</a></li>
       <li><a class="nav-link" href="rnArt.html">Art</a></li>
       <li><a class="nav-link" href="rnAnim.html">Animation</a></li>
       <li><a class="nav-link" href="rnArtifacts.html">Artifacts</a></li>
